<resources>
    <string name="app_name">Smart Garden App</string>
    <string name="garden_management">Garden Management</string>
    <string name="welcome_to_mygarden">Welcome to MyGarden</string>
    <string name="grow_plants_easily_from_your_home_with_our_award_winning_pods">Grow plants easily from your home with our award-winning pods</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome back</string>
    <string name="let_s_get_back_to_growing_your_mygarden_plants_shall_we">Let’s get back to growing your MyGarden plants, shall we?</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="or_login_using_social_media">Or Login using social media</string>
    <string name="register_on_mygarden">Register on MyGarden</string>
    <string name="create_an_mygarden_account_we_can_t_wait_to_have_you">Create an MyGarden account, We can’t wait to have you.</string>
    <string name="or_register_using_social_media">Or Register using social media</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="new_here_register">New here? Register</string>
    <string name="garden">Garden</string>
    <string name="id">ID:</string>
    <string name="humidity">Humidity</string>
    <string name="temperature">Temperature</string>
    <string name="water_level">Water Level</string>
    <string name="light">Light</string>
    <string name="light_status">Light Status</string>
    <string name="fan_status">Fan Status</string>
    <string name="set_humidity">Set Humidity</string>
    <string name="set_temperature">Set Temperature</string>
    <string name="using_6_out_9_pods">Using 6 out 9 pods</string>
    <string name="basil_will_be_ready_for_harvest_in_3_days">Basil will be ready for harvest in 3 days</string>
    <string name="growing_now">Growing now</string>
    <string name="automatically">Automatically</string>
    <string name="set">SET</string>
    <string name="set_time_for_water_pump_in_day">Set Time For Water Pump In Day</string>
    <string name="enable">Enable</string>
    <string name="select_time">Select Time</string>
    <string name="sunny">Sunny</string>
    <string name="raining">Raining</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_password">Confirm password</string>


    <string name="title_raining">Raining</string>
    <string name="content_raining">Weather is raining</string>
    <string name="title_sunny">Sunny</string>
    <string name="content_sunny">Weather is sunny</string>
</resources>