<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="loginFragment"
            type="com.advanced.smartgardenapp.ui.login.LoginFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_background"
        tools:context=".ui.login.LoginFragment">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="220dp"
            android:layout_height="41dp"
            android:text="@string/welcome_back"
            android:textSize="32sp"
            android:textStyle="bold"
            android:fontFamily="@font/lato_regular"
            android:textColor="@color/white"
            android:layout_marginStart="24dp"
            android:layout_marginTop="120dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/text_description"
            android:layout_width="366dp"
            android:layout_height="52dp"
            android:text="@string/let_s_get_back_to_growing_your_mygarden_plants_shall_we"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginTop="16sp"
            android:fontFamily="@font/lato_regular"
            app:layout_constraintTop_toBottomOf="@id/text_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:textColorHint="@color/white"
            android:hint="@string/email_address"
            app:cursorColor="@color/white"
            app:hintTextColor="@color/white"
            app:boxStrokeColor="@color/white"
            app:placeholderTextColor="@color/white"
            app:boxStrokeWidth="2dp"
            android:foregroundTint="@color/white"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintTop_toBottomOf="@id/text_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="20sp"
                android:textColor="@color/white"
                android:drawableTint="@color/white"
                android:textSize="17sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColorHint="@color/white"
            android:hint="@string/password"
            app:cursorColor="@color/white"
            app:hintTextColor="@color/white"
            app:boxStrokeColor="@color/white"
            app:placeholderTextColor="@color/white"
            app:boxStrokeWidth="2dp"
            android:foregroundTint="@color/white"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintTop_toBottomOf="@id/layout_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="20sp"
                android:inputType="textPassword"
                android:drawableTint="@color/white"
                android:textColor="@color/white"
                android:textSize="17sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_your_password"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/lato_regular"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_password"/>

        <TextView
            android:id="@+id/text_another_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_login_using_social_media"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="@font/lato_regular"
            android:layout_marginTop="48dp"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_forgot_password"/>

        <TextView
            android:id="@+id/text_facebook"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button_corner"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/facebook"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:paddingHorizontal="26dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_another_login"
            app:drawableStartCompat="@drawable/ic_facebook" />

        <TextView
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button_corner"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/google"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:paddingHorizontal="34dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_another_login"
            app:drawableStartCompat="@drawable/ic_google" />

        <TextView
            android:id="@+id/button_login"
            android:layout_width="366dp"
            android:layout_height="52dp"
            android:layout_marginTop="87dp"
            android:background="@drawable/background_button_register"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/primary_background"
            android:textSize="18sp"
            android:textStyle="bold"
            android:onClick="@{() -> loginFragment.login()}"
            app:layout_constraintTop_toBottomOf="@id/text_facebook"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_register"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:text="@string/new_here_register"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginTop="32dp"
            android:onClick="@{() -> loginFragment.goToRegister()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_login"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>