<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="welcomeFragment"
            type="com.advanced.smartgardenapp.ui.welcome.WelcomeFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_background"
        tools:context=".ui.welcome.WelcomeFragment">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="366dp"
            android:layout_height="52dp"
            android:text="@string/welcome_to_mygarden"
            android:fontFamily="@font/lato_regular"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@id/text_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/text_description"
            android:layout_width="366dp"
            android:layout_height="52dp"
            android:text="@string/grow_plants_easily_from_your_home_with_our_award_winning_pods"
            android:fontFamily="@font/lato_regular"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginBottom="104dp"
            app:layout_constraintBottom_toTopOf="@id/button_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/button_register"
            android:layout_width="366dp"
            android:layout_height="52dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/background_button_register"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/primary_background"
            android:textSize="18sp"
            android:textStyle="bold"
            android:onClick="@{() -> welcomeFragment.goToRegister()}"
            app:layout_constraintBottom_toTopOf="@id/button_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/button_login"
            android:layout_width="366dp"
            android:layout_height="52dp"
            android:text="@string/login"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:onClick="@{() -> welcomeFragment.goToLogin()}"
            android:layout_marginBottom="56dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/background_button_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>