<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="selectedGarden"
            type="com.advanced.smartgardenapp.data.model.Garden" />
        <variable
            name="detailFragment"
            type="com.advanced.smartgardenapp.ui.details.GardenDetailFragment" />
    </data>

    <ScrollView
        android:background="@color/secondary_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.details.GardenDetailFragment">

            <ImageView
                android:id="@+id/image_garden"
                android:layout_width="match_parent"
                android:layout_height="254dp"
                android:src="@drawable/image_garden_1"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/image_back"
                android:layout_width="121dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="64sp"
                android:layout_marginStart="24dp"
                android:text="Go back"
                android:gravity="center"
                android:textSize="18sp"
                android:onClick="@{() -> detailFragment.goBack()}"
                android:paddingHorizontal="12sp"
                android:textColor="@color/primary_background"
                android:fontFamily="@font/lato_regular"
                android:drawableStart="@drawable/ic_back"
                android:background="@drawable/background_button_back"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageView
                android:id="@+id/image_info"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="8dp"
                android:src="@drawable/ic_info"
                android:layout_marginEnd="24dp"
                android:background="@drawable/background_info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/image_back"
                app:layout_constraintBottom_toBottomOf="@id/image_back"/>

            <TextView
                android:id="@+id/text_garden_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textSize="32sp"
                android:textStyle="bold"
                android:textColor="@color/primary_text"
                android:fontFamily="@font/lato_regular"
                android:text="@{selectedGarden.name}"
                app:layout_constraintTop_toBottomOf="@id/image_garden"
                app:layout_constraintStart_toStartOf="@id/image_back"/>

            <TextView
                android:id="@+id/text_garden_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="14sp"
                android:fontFamily="@font/lato_regular"
                android:text="@{@string/id + ' ' +selectedGarden.id}"
                app:layout_constraintTop_toBottomOf="@id/text_garden_name"
                app:layout_constraintStart_toStartOf="@id/image_back"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:elevation="8dp"
                android:outlineProvider="bounds"
                android:layout_marginHorizontal="20sp"
                android:background="@drawable/background_detail"
                app:layout_constraintTop_toBottomOf="@id/text_garden_id"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                
                <View
                    android:id="@+id/view_grow"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="12sp"
                    android:layout_marginTop="16sp"
                    android:background="@drawable/ic_grow"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/text_slot"
                    android:text="@string/using_6_out_9_pods"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/secondary_text"
                    android:textSize="16sp"
                    android:fontFamily="@font/lato_regular"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="@id/view_grow"
                    app:layout_constraintBottom_toBottomOf="@id/view_grow"
                    app:layout_constraintStart_toEndOf="@id/view_grow"/>

                <View
                    android:id="@+id/view_time"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="12sp"
                    android:layout_marginTop="12sp"
                    android:layout_marginBottom="13sp"
                    android:background="@drawable/ic_time"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view_grow"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/text_time"
                    android:text="@string/basil_will_be_ready_for_harvest_in_3_days"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/secondary_text"
                    android:textSize="16sp"
                    android:fontFamily="@font/lato_regular"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="@id/view_time"
                    app:layout_constraintBottom_toBottomOf="@id/view_time"
                    app:layout_constraintStart_toEndOf="@id/view_time"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:elevation="8dp"
                android:outlineProvider="bounds"
                android:layout_marginTop="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/constraint_detail"
                app:layout_constraintStart_toStartOf="@id/constraint_detail"
                app:layout_constraintEnd_toEndOf="@id/constraint_detail"
                android:background="@drawable/background_set">

                <View
                    android:id="@+id/view_grow_now"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="8dp"
                    android:background="@drawable/background_grow_now"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <View
                    android:id="@+id/icon_view_grow_now"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:background="@drawable/ic_plan"
                    android:layout_marginStart="12sp"
                    app:layout_constraintStart_toStartOf="@id/view_grow_now"
                    app:layout_constraintTop_toTopOf="@id/view_grow_now"
                    app:layout_constraintBottom_toBottomOf="@id/view_grow_now"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textSize="14sp"
                    android:textColor="@color/secondary_text"
                    android:text="@string/growing_now"
                    app:layout_constraintStart_toEndOf="@id/icon_view_grow_now"
                    app:layout_constraintTop_toTopOf="@id/view_grow_now"
                    app:layout_constraintBottom_toBottomOf="@id/view_grow_now"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycle_view_plant"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16sp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintStart_toStartOf="@id/view_grow_now"
                    app:layout_constraintEnd_toEndOf="@id/view_grow_now"
                    app:layout_constraintTop_toBottomOf="@id/view_grow_now"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>